# megamaid

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  megamaid.example.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml
benches/: scanner_benchmarks.rs
docs/: ARCHITECTURE.md  MILESTONE_1_COMPLETE.md  MILESTONE_4_PROGRESS.md  MILESTONE_4_STATUS.md  QUICKSTART.md  plan-004-milestone4-gui.md
docs/ai/plans/: plan-001-milestone1-implementation.md  plan-001-phase1-implementation.md  plan-002-milestone2-implementation.md  plan-003-milestone3-implementation.md  plan-004-remediation.md  plan-005-remediation.md  plan-006-manage-plan-view.md  plan-006-tests.md
docs/features/gui/: manage_plan.feature  plan_edit.feature  results_visual.feature  scan.feature
megamaid-ui/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
megamaid-ui/src/: App.svelte  app.css
megamaid-ui/src-tauri/: Cargo.toml  tauri.conf.json
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs  orchestrator.rs
src/config/: loader.rs  mod.rs  schema.rs  validation.rs
src/detector/: engine.rs  mod.rs  rules.rs
src/executor/: engine.rs  mod.rs  transaction.rs
src/models/: cleanup_plan.rs  file_entry.rs  mod.rs
src/planner/: generator.rs  mod.rs  writer.rs
src/scanner/: mod.rs  parallel.rs  progress.rs  traversal.rs
src/verifier/: engine.rs  mod.rs  report.rs
tests/: config_integration.rs  e2e_integration.rs  executor_integration.rs  feature_matrix_tests.rs  performance_tests.rs  scanner_integration.rs  scanner_properties.rs
(+26 files in other folders)
