[package]
name = "megamaid"
version = "0.1.0"
edition = "2021"
authors = ["echozulucode"]
license = "MIT"
description = "High-performance storage analysis and cleanup tool"

[dependencies]
# File system traversal
walkdir = "2.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"

# Concurrency
rayon = "1.10"
num_cpus = "1.16"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Execution
uuid = { version = "1.6", features = ["v4", "serde"] }
trash = "3.1"

# Configuration
glob = "0.3"
dirs = "5.0"

[dev-dependencies]
# Testing
tempfile = "3.8"
proptest = "1.4"
assert_cmd = "2.0"
predicates = "3.0"
serde_json = "1.0"

# Benchmarking
criterion = "0.5"

[[bench]]
name = "scanner_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
